Fix spacing issue on FF 3.0 with Forum New Post Dlg

--- a/public/stylesheets/js_dialog.css
+++ b/public/stylesheets/js_dialog.css
@@ -521,6 +521,10 @@ a.footnote_tip:hover span.tip {
 	clear: both;
 }
 
+.forum_reply_license1 {
+	padding-left: 5px;
+}
+
 .forum_reply_row {
 	padding-bottom: 10px;
 }
